# terigrapi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
terigrapi/: __init__.py  constants.py  enum.py  utils.py
terigrapi/client/: __init__.py  client.py  context_controller.py  default.py  exeptions.py  settings.py  utils.py
terigrapi/client/mixins/: __init__.py  auth.py  base.py  direct.py  password.py
terigrapi/client/session/: __init__.py  base.py  config.py  httpx.py  types.py  utils.py
terigrapi/methods/: __init__.py  base.py  return_builds.py  utils.py
terigrapi/methods/private/: __init__.py  delete_direct_item.py  direct_pending_threads.py  direct_search.py  direct_thread.py  direct_thread_action.py  direct_thread_by_participants.py  direct_threads.py  get_reels_tray_feed.py  get_timeline_feed.py  login.py  logout.py  one_tap_app_login.py  send_direct_item.py  send_direct_link.py  send_direct_media.py  send_direct_message.py  sync_launcher.py  (+6 more)
terigrapi/types/: __init__.py  action_log.py  audio.py  base.py  direct.py  direct_cursor.py  direct_full_thread.py  direct_inbox.py  direct_item.py  direct_response.py  direct_search.py  direct_story.py  direct_thread.py  expired_placeholder.py  fallback.py  friendship_status.py  full_user.py  image_verison_2.py  last_seen.py  link.py  link_context.py  media.py  media_caption.py  media_share.py  music_metadata.py  password_publickeys.py  reactions.py  short_user.py  text_forrmatting.py  theme.py  url_info.py  user.py  viewer_user.py  visual_media.py  voice_media.py  xma_link.py  xma_media_share.py
(+9 files in other folders)
