[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "terigrapi"
dynamic =  ["version"]
description = "A Python client library for interacting with Instagram's API"
readme = "README.md"
authors = [
    { name = "Teri_anric", email = "2005ahi2005@gmail.com"}
]
license = { text = "MIT" }
requires-python = ">=3.11.9"
dependencies = [
    "httpx~=0.27.0",
    "orjson~=3.10.6",
    "pydantic~=2.8.2",
    "pycryptodomex~=3.20.0",
    "zstandard~=0.23.0"
]

[project.urls]
author = "https://github.com/Teri-anric"


[tool.setuptools.dynamic]
version = { attr = "terigrapi.__meta__.VERSION"}
